Тестирует настройки плагина для vscode

--- a/source/index.html
+++ b/source/index.html
@@ -12,6 +12,7 @@
 <body class="page__body">
   <header class="header">Шапка</header>
   <p>Привет, мир! Тестим gh-pages</p>
+  <p>Тестим настройки плагина для vscode</p>
 </body>
 
 </html>
