--- a/source/index.html
+++ b/source/index.html
@@ -3,15 +3,157 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Название проекта</title>
+  <title>Cat Energy: магазин питания для котов</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles/styles.css">
   <script src="scripts/index.js" defer></script>
 </head>
 
 <body class="page__body">
-  <header class="header">Шапка</header>
-  <p>Привет, мир! Тестим gh-pages</p>
+  <header class="main-header">
+    <a class="main-header__logo" href="index.html">
+      <img class="main-header__logo-image" src="" alt="Логотип сайта" width="60" height="50">
+      <img class="main-header__logo-text" src="" alt="Cat Energy" width="" height="">
+    </a>
+
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+      <ul class="main-nav__list">
+        <li class="main-nav__item">
+          <a class="main-nav__link main-nav__link--current">Главная</a>
+        </li>
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="#">Каталог продукции</a>
+        </li>
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="#">подбор программы</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="main-container">
+    <h1 class="visually-hidden">Cat Energy</h1>
+    <section class="hero">
+      <h2 class="hero__title section-title">Функциональное питание для котов</h2>
+      <p class="hero__description">Занялся собой? Займись котом!</p>
+      <a class="button" href="#">подобрать программу</a>
+      <img class="hero__image" src="" alt="Упаковка еды Cat Energy Курица" width="" height="">
+    </section>
+
+    <section class="catalog">
+      <h2 class="visually-hidden">Категории продукции</h2>
+      <ul class="catalog__list">
+        <li class="catalog__item catalog__item-icon-cat-slim">
+          <h3 class="catalog__title">похудение</h3>
+          <p class="catalog__description">Ваш кот весит больше собаки и почти утратил способность
+            лазить по деревьям? Пора на диету! Cat Energy Slim поможет
+            вашему питомцу сбросить лишний вес.</p>
+          <a class="catalog__link" href="#">каталог slim</a>
+        </li>
+        <li class="catalog__item catalog__item-icon-cat-heavy">
+          <h3 class="catalog__title">набор массы</h3>
+          <p class="catalog__description">Заработать авторитет среди дворовых котов и даже собак?
+            Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a class="catalog__link" href="#">каталог pro</a>
+        </li>
+      </ul>
+    </section>
+
+    <section class="features">
+      <h2 class="features__title section-title">Как это работает</h2>
+
+      <ol class="features__list">
+        <li class="features__item features__item--icon-leaf">
+          Функциональное питание содержит только полезные питательные вещества.
+        </li>
+        <li class="features__item features__item--icon-water">
+          Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+        </li>
+        <li class="features__item features__item--icon-eat">
+          Замените один-два приема обычной еды на наше функциональное питание.
+        </li>
+        <li class="features__item features__item--icon-clock">
+          Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+        </li>
+      </ol>
+    </section>
+
+    <section class="live-example">
+      <h2 class="live-example__title section-title">Живой пример</h2>
+
+      <div class="live-example-inner-wrap">
+        <p class="live-example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой
+          обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
+          привычек и по-прежнему спит по 16 часов в день.</p>
+        <dl class="live-example__list">
+          <div class="live-example__item">
+            <dt class="live-example__value">5 КГ</dt>
+            <dd class="live-example__meaning">снижение веса</dd>
+          </div>
+          <div class="live-example__item">
+            <dt class="live-example__value">60 ДНЕЙ</dt>
+            <dd class="live-example__meaning">затрачено времени</dd>
+          </div>
+          <div class="live-example__item-total">
+            <dt class="live-example__total-value">15 000 РУБ.</dt>
+            <dd class="live-example__total-meaning">Затраты на питание:</dd>
+          </div>
+        </dl>
+        <div class="live-example__images">
+          <img class="live-example__image live-example__image--before" src="" alt="Толстый кот" width="560" height="512">
+          <img class="live-example__image live-example__image--after" src="" alt="Худой кот" width="560" height="512">
+        </div>
+      </div>
+
+    </section>
+
+    <section class="contacts">
+      <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
+      <address class="contacts-address-wrap">
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8</p>
+        <p class="contacts__address">Санкт-Петербург</p>
+      </address>
+      <div class="contacts__map">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+      </div>
+    </section>
+  </main>
+
+  <footer class="main-footer">
+    <svg class="main-footer__logo-text" src="" alt="Cat Energy" width="" height="">
+    </svg>
+
+    <section class="main-footer__social social">
+      <h2 class="visually-hidden">Мы в соцсетях</h2>
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social_link icon icon--vk" href="#" target="_blank" rel="noreferrer noopener">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social_link icon icon--yt" href="#" target="_blank" rel="noreferrer noopener">
+            <span class="visually-hidden">Youtube</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social_link icon icon--tg" href="#" target="_blank" rel="noreferrer noopener">
+            <span class="visually-hidden">Telegram</span>
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <section class="partner">
+      <h2 class="visually-hidden">Партнер</h2>
+      <a class="partner__link partner__link--html-academy" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noreferrer noopener">
+        HTML Academy
+      </a>
+    </section>
+  </footer>
 </body>
 
 </html>
