--- a/source/index.html
+++ b/source/index.html
@@ -38,7 +38,7 @@
     <h1 class="visually-hidden">Cat Energy</h1>
     <section class="hero">
       <h2 class="hero__title section-title">Функциональное питание для котов</h2>
-      <p class="hero__description">Занялся собой? Займись котом!</p>
+      <p class="hero__desc">Занялся собой? Займись котом!</p>
       <a class="hero__button button" href="#">Подобрать программу</a>
       <img class="hero__image" src="#" alt="Упаковка еды Cat Energy Курица" width="280" height="270">
     </section>
@@ -48,14 +48,14 @@
       <ul class="catalog__list">
         <li class="catalog__item catalog__item--icon-cat-slim">
           <h3 class="catalog__title">похудение</h3>
-          <p class="catalog__description">Ваш кот весит больше собаки и почти утратил способность
+          <p class="catalog__desc">Ваш кот весит больше собаки и почти утратил способность
             лазить по деревьям? Пора на диету! Cat Energy Slim поможет
             вашему питомцу сбросить лишний вес.</p>
           <a class="catalog__link" href="#">Каталог slim</a>
         </li>
         <li class="catalog__item catalog__item--icon-cat-heavy">
           <h3 class="catalog__title">набор массы</h3>
-          <p class="catalog__description">Заработать авторитет среди дворовых котов и даже собак?
+          <p class="catalog__desc">Заработать авторитет среди дворовых котов и даже собак?
             Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a class="catalog__link" href="#">Каталог pro</a>
         </li>
@@ -89,8 +89,8 @@
     <section class="live-example">
       <h2 class="live-example__title section-title">Живой пример</h2>
 
-      <div class="live-example-inner-wrap">
-        <p class="live-example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой
+      <div class="live-example__inner-wrap">
+        <p class="live-example__desc">Борис сбросил 5 кг за 2 месяца, просто заменив свой
           обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих
           привычек и по-прежнему спит по 16 часов в день.</p>
         <dl class="live-example__list">
@@ -124,7 +124,7 @@
 
     <section class="contacts">
       <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
-      <address class="contacts-address-wrap">
+      <address class="contacts__address-wrap">
         <p class="contacts__address">ул. Большая Конюшенная, д. 19/8</p>
         <p class="contacts__address">Санкт-Петербург</p>
       </address>
@@ -143,17 +143,17 @@
       <h2 class="visually-hidden">Мы в соцсетях</h2>
       <ul class="social__list">
         <li class="social__item">
-          <a class="social__link icon icon--vk" href="#" target="_blank" rel="noreferrer noopener">
+          <a class="social__link social__link--icon-vk" href="#" target="_blank" rel="noreferrer noopener">
             <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
         <li class="social__item">
-          <a class="social__link icon icon--yt" href="#" target="_blank" rel="noreferrer noopener">
+          <a class="social__link social__link--icon-yt" href="#" target="_blank" rel="noreferrer noopener">
             <span class="visually-hidden">Youtube</span>
           </a>
         </li>
         <li class="social__item">
-          <a class="social__link icon icon--tg" href="#" target="_blank" rel="noreferrer noopener">
+          <a class="social__link social__link--icon-tg" href="#" target="_blank" rel="noreferrer noopener">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
@@ -162,8 +162,7 @@
 
     <section class="partner">
       <h2 class="visually-hidden">Партнер</h2>
-      <!-- todo или partner__link--html-academy? -->
-      <a class="partner__link icon icon--html-academy" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noreferrer noopener">
+      <a class="partner__link partner__link--icon-html-academy" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noreferrer noopener">
         HTML Academy
       </a>
     </section>
