--- a/source/catalog.html
+++ b/source/catalog.html
@@ -103,6 +103,60 @@
       </ul>
     </section>
 
+    <section class="catalog-extra">
+      <!-- todo подумать над именем section-subtitle -->
+      <h2 class="catalog-extra__title section-subtitle">Дополнительные товары</h2>
+      <ul class="catalog-extra__list">
+        <li class="catalog-extra__item product">
+          <h3 class="product__title">Сахарозаменитель</h3>
+          <p class="product__count">1 упаковка (100 г)</p>
+          <p class="product__price">200 ₽</p>
+          <button class="product__button button" type="button">Заказать</button>
+        </li>
+        <li class="catalog-extra__item product">
+          <h3 class="product__title">Питьевая вода</h3>
+          <p class="product__count">5 литров</p>
+          <p class="product__price">50 ₽</p>
+          <button class="product__button button" type="button">Заказать</button>
+        </li>
+        <li class="catalog-extra__item product">
+          <h3 class="product__title">Молоко</h3>
+          <p class="product__count">1 литр</p>
+          <p class="product__price">100 ₽</p>
+          <button class="product__button button" type="button">Заказать</button>
+        </li>
+        <li class="catalog-extra__item product">
+          <h3 class="product__title">Витамины</h3>
+          <p class="product__count">1 упаковка (30 г)</p>
+          <p class="product__price">300 ₽</p>
+          <button class="product__button button" type="button">Заказать</button>
+        </li>
+      </ul>
+      <div class="catalog-extra__promotion">
+        <p class="catalog-extra__promotion-text">Закажите все и получите чехол для кота в подарок!</p>
+      </div>
+    </section>
+
+    <section class="subscribe">
+      <h2 class="catalog-extra__title section-subtitle">Акции и новинки</h2>
+
+      <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
+        <label class="visually-hidden" for="subscribe-form-email">Ваш e-mail</label>
+        <input class="subscribe__form-input" type="email" name="email" id="subscribe-form-email" placeholder="кuklachev@gmail.com">
+        <button class="subscribe__form-button button" type="button">Подписаться</button>
+      </form>
+    </section>
+
+    <section class="contacts">
+      <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
+      <address class="contacts__address-wrap">
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8</p>
+        <p class="contacts__address">Санкт-Петербург</p>
+      </address>
+      <div class="contacts__map">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+      </div>
+    </section>
   </main>
 
   <footer class="main-footer">
