Исправляет мелкие ошибки в именах классов

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -47,7 +47,7 @@
             <a class="product-card__link-title" href="#">
               <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
             </a>
-            <dl class="product-card__desc desc-list">
+            <dl class="product-card__desc">
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Масса</dt>
                 <dd class="product-card__desc-value">500 г</dd>
@@ -72,7 +72,7 @@
             <a class="product-card__link-title" href="#">
               <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
             </a>
-            <dl class="product-card__desc desc-list">
+            <dl class="product-card__desc">
               <div class="product-card__desc-inner-wrap">
                 <dt class="product-card__desc-term">Масса</dt>
                 <dd class="product-card__desc-value">1000 г</dd>
@@ -138,7 +138,8 @@
     </section>
 
     <section class="subscribe">
-      <h2 class="catalog-extra__title section-subtitle">Акции и новинки</h2>
+      <h2 class="subscribe__title section-subtitle">Акции и новинки</h2>
+      <p class="subscribe__desc">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
 
       <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
         <label class="visually-hidden" for="subscribe-form-email">Ваш e-mail</label>
