--- a/source/catalog.html
+++ b/source/catalog.html
@@ -25,7 +25,7 @@
           <a class="main-nav__link" href="index.html">Главная</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--current">Каталог продукции</a>
+          <a class="main-nav__link main-nav__link--current" href="#">Каталог продукции</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link" href="program.html">Подбор программы</a>
@@ -41,7 +41,7 @@
       <ul class="catalog__list">
         <li class="catalog__item">
           <article class="product-card">
-            <a class="product-card__link-image" href="#">
+            <a class="product-card__link-image" href="#" tabindex="-1">
               <img class="product-card__image" src="#" alt="Оранжевая упаковка" width="68" height="86">
             </a>
             <a class="product-card__link-title" href="#">
@@ -61,7 +61,7 @@
                 <dd class="product-card__desc-value">700 ₽</dd>
               </div>
             </dl>
-            <button class="product-card__button button" type="button">Заказать</button>
+            <a class="product-card__button button" href="#">Заказать</a>
           </article>
         </li>
         <li class="catalog__item">
@@ -86,7 +86,7 @@
                 <dd class="product-card__desc-value">1000 ₽</dd>
               </div>
             </dl>
-            <button class="product-card__button button" type="button">Заказать</button>
+            <a class="product-card__button button" href="#">Заказать</a>
           </article>
         </li>
 
@@ -143,8 +143,8 @@
 
       <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
         <label class="visually-hidden" for="subscribe-form-email">Ваш e-mail</label>
-        <input class="subscribe__form-input" type="email" name="email" id="subscribe-form-email" placeholder="кuklachev@gmail.com">
-        <button class="subscribe__form-button button" type="button">Подписаться</button>
+        <input class="subscribe__form-input" type="email" name="email" id="subscribe-form-email" placeholder="кuklachev@gmail.com" required>
+        <button class="subscribe__form-button button" type="submit">Подписаться</button>
       </form>
     </section>
 
@@ -156,6 +156,7 @@
       </address>
       <div class="contacts__map">
         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+        <img class="contacts__map-image" src="#" alt="Адрес на карте" width="320" height="360">
       </div>
     </section>
   </main>
@@ -187,8 +188,8 @@
     </section>
 
     <section class="partner">
-      <h2 class="visually-hidden">Партнер</h2>
-      <a class="partner__link partner__link--icon-html-academy" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noreferrer noopener">
+      <h2 class="visually-hidden">Разработано при поддержке</h2>
+      <a class="partner__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noreferrer noopener">
         HTML Academy
       </a>
     </section>
