--- a/source/index.html
+++ b/source/index.html
@@ -139,17 +139,17 @@
       <h2 class="visually-hidden">Мы в соцсетях</h2>
       <ul class="social__list">
         <li class="social__item">
-          <a class="social__link social__link--icon-vk" href="#" target="_blank" rel="noreferrer noopener">
+          <a class="social__link social__link--icon-vk" href="https://vk.com/htmlacademy" target="_blank" rel="noreferrer noopener">
             <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--icon-yt" href="#" target="_blank" rel="noreferrer noopener">
+          <a class="social__link social__link--icon-yt" href="https://www.youtube.com/@HTMLAcademyTV" target="_blank" rel="noreferrer noopener">
             <span class="visually-hidden">Youtube</span>
           </a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--icon-tg" href="#" target="_blank" rel="noreferrer noopener">
+          <a class="social__link social__link--icon-tg" href="https://htmlacademy.t.me" target="_blank" rel="noreferrer noopener">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
