--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,8 +43,8 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#" tabindex="-1">
               <picture>
-                <source type="image/jpg" media="(min-width: 768px)" srcset="images/catalog-1-tablet@1x.jpg 1x, images/catalog-1-tablet@2x.jpg 2x" width="161" height="172">
-                <img class="product-card__image" src="images/catalog-1-mobile@1x.jpg" srcset="images/catalog-1-mobile@2x.jpg 2x" alt="Оранжевая упаковка" width="68" height="86">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-1-tablet@1x.png 1x, images/catalog-1-tablet@2x.png 2x" width="161" height="172">
+                <img class="product-card__image" src="images/catalog-1-mobile@1x.png" srcset="images/catalog-1-mobile@2x.png 2x" alt="Оранжевая упаковка" width="68" height="86">
               </picture>
             </a>
             <a class="product-card__link-title" href="#">
@@ -71,9 +71,9 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#">
               <picture>
-                <source type="image/jpg" media="(min-width: 1440px)" srcset="images/catalog-2-tablet@1x.jpg 1x, images/catalog-2-tablet@2x.jpg 2x" width="172" height="196">
-                <source type="image/jpg" media="(min-width: 768px)" srcset="images/catalog-2-tablet@1x.jpg 1x, images/catalog-2-tablet@2x.jpg 2x" width="161" height="172">
-                <img class="product-card__image" src="images/catalog-2-mobile@1x.jpg" srcset="images/catalog-2-mobile@2x.jpg 2x" alt="Оранжевая упаковка побольше" width="84" height="100">
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-2-tablet@1x.png 1x, images/catalog-2-tablet@2x.png 2x" width="172" height="196">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-2-tablet@1x.png 1x, images/catalog-2-tablet@2x.png 2x" width="161" height="172">
+                <img class="product-card__image" src="images/catalog-2-mobile@1x.png" srcset="images/catalog-2-mobile@2x.png 2x" alt="Оранжевая упаковка побольше" width="84" height="100">
               </picture>
             </a>
             <a class="product-card__link-title" href="#">
