Добавляет фавиконку ico

--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,9 @@
   <title>Cat Energy: магазин питания для котов</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles/styles.css">
+
+  <link rel="icon" href="favicon.ico">
+  
   <script src="scripts/index.js" defer></script>
 </head>
 
@@ -108,7 +111,7 @@
         </dl>
         <div class="live-example__slider compare-slider">
           <picture>
-            <source type="image/png" media="(min-width: 768px)" srcset="images/cat-before-tablet@1x.png 1x, images/cat-before-tablet@2x.png 2x" width="560" height="512">
+            <source type="image/png" media="(min-width: 768px)" srcset="images/cat-before-tablet@1x.png 1x, images/cat-before-tablet@2x.png 2x" width="530" height="512">
             <img class="compare-slider__image compare-slider__image--before" src="images/cat-before-mobile@1x.png" srcset="images/cat-before-mobile@2x.png 2x" alt="Толстый кот" width="280" height="256">
           </picture>
           <picture>
