--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,6 +6,7 @@
   <title>Cat Energy: Каталог</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="icon" href="favicon.ico">
   <script src="scripts/index.js" defer></script>
 </head>
 
