--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="favicons/apple.png">
+  <link rel="apple-touch-icon" href="favicons/apple-touch-icon.png">
+  <link rel="manifest" href="/manifest.webmanifest">
   <script src="scripts/index.js" defer></script>
 </head>
 
@@ -103,7 +104,10 @@
         <li class="catalog__item">
           <article class="product-card">
             <a class="product-card__link-image" href="#">
-              <img class="product-card__image" src="#" alt="Зеленая упаковка" width="68" height="78">
+              <picture>
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-3-tablet@1x.png 1x, images/catalog-3-tablet@2x.png 2x" width="161" height="172">
+                <img class="product-card__image" src="images/catalog-3-mobile@1x.png" srcset="images/catalog-3-mobile@2x.png 2x" alt="Зеленая упаковка" width="68" height="78">
+              </picture>
             </a>
             <a class="product-card__link-title" href="#">
               <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
@@ -129,7 +133,10 @@
         <li class="catalog__item">
           <article class="product-card">
             <a class="product-card__link-image" href="#">
-              <img class="product-card__image" src="#" alt="Зеленая упаковка побольше" width="84" height="100">
+              <picture>
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-4-tablet@1x.png 1x, images/catalog-4-tablet@2x.png 2x" width="161" height="172">
+                <img class="product-card__image" src="images/catalog-4-mobile@1x.png" srcset="images/catalog-4-mobile@2x.png 2x" alt="Зеленая упаковка побольше" width="84" height="100">
+              </picture>
             </a>
             <a class="product-card__link-title" href="#">
               <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
@@ -155,7 +162,10 @@
         <li class="catalog__item">
           <article class="product-card">
             <a class="product-card__link-image" href="#">
-              <img class="product-card__image" src="#" alt="Синяя упаковка" width="68" height="78">
+              <picture>
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-5-tablet@1x.png 1x, images/catalog-5-tablet@2x.png 2x" width="161" height="172">
+                <img class="product-card__image" src="images/catalog-5-mobile@1x.png" srcset="images/catalog-5-mobile@2x.png 2x" alt="Синяя упаковка" width="68" height="78">
+              </picture>
             </a>
             <a class="product-card__link-title" href="#">
               <h3 class="product-card__title">Cat Energy sLIM 500 г</h3>
@@ -181,7 +191,10 @@
         <li class="catalog__item">
           <article class="product-card">
             <a class="product-card__link-image" href="#">
-              <img class="product-card__image" src="#" alt="Синяя упаковка побольше" width="84" height="100">
+              <picture>
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-6-tablet@1x.png 1x, images/catalog-6-tablet@2x.png 2x" width="161" height="172">
+                <img class="product-card__image" src="images/catalog-6-mobile@1x.png" srcset="images/catalog-6-mobile@2x.png 2x" alt="Синяя упаковка побольше" width="84" height="100">
+              </picture>
             </a>
             <a class="product-card__link-title" href="#">
               <h3 class="product-card__title">Cat Energy SLIM 1000 г</h3>
@@ -207,7 +220,10 @@
         <li class="catalog__item">
           <article class="product-card">
             <a class="product-card__link-image" href="#">
-              <img class="product-card__image" src="#" alt="Фиолетовая упаковка" width="72" height="84">
+              <picture>
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-7-tablet@1x.png 1x, images/catalog-7-tablet@2x.png 2x" width="161" height="172">
+                <img class="product-card__image" src="images/catalog-7-mobile@1x.png" srcset="images/catalog-7-mobile@2x.png 2x" alt="Фиолетовая упаковка" width="72" height="84">
+              </picture>
             </a>
             <a class="product-card__link-title" href="#">
               <h3 class="product-card__title">Cat Energy slim 500 г</h3>
