Добавляет бэм-блок для логотипа

--- a/source/index.html
+++ b/source/index.html
@@ -15,9 +15,9 @@
 
 <body class="page__body">
   <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <img class="main-header__logo-image" src="#" alt="Логотип сайта" width="33" height="38">
-      <img class="main-header__logo-text" src="#" alt="Cat Energy" width="101" height="18">
+    <a class="main-header__logo logo" href="index.html">
+      <img class="logo__image" src="#" alt="Логотип сайта" width="33" height="38">
+      <img class="logo__text" src="#" alt="Cat Energy" width="101" height="18">
     </a>
 
     <nav class="main-nav">
@@ -149,8 +149,8 @@
   </main>
 
   <footer class="main-footer">
-    <a class="main-footer__logo" href="index.html">
-      <img class="main-footer__logo-text" src="#" alt="Cat Energy" width="128" height="24">
+    <a class="main-footer__logo logo" href="index.html">
+      <img class="logo__text" src="#" alt="Cat Energy" width="128" height="24">
     </a>
 
     <section class="main-footer__social social">
