Правит классы в подвале

--- a/source/index.html
+++ b/source/index.html
@@ -174,9 +174,9 @@
       </ul>
     </section>
 
-    <section class="partner">
+    <section class="main-footer__partner">
       <h2 class="visually-hidden">Разработано при поддержке</h2>
-      <a class="partner__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noreferrer noopener">
+      <a class="main-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noreferrer noopener">
         HTML Academy
       </a>
     </section>
