Добавляет scss файлы. Подключает шрифты. Добавляет scss-переменные.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -299,7 +299,7 @@
 
       <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
         <label class="visually-hidden" for="subscribe-form-email">Ваш e-mail</label>
-        <input class="subscribe__form-input" type="email" name="email" id="subscribe-form-email" placeholder="кuklachev@gmail.com" required>
+        <input class="subscribe__form-input input" type="email" name="email" id="subscribe-form-email" placeholder="кuklachev@gmail.com" required>
         <button class="subscribe__form-button button" type="submit">Подписаться</button>
       </form>
     </section>
@@ -347,9 +347,9 @@
       </ul>
     </section>
 
-    <section class="partner">
+    <section class="main-footer__partner">
       <h2 class="visually-hidden">Разработано при поддержке</h2>
-      <a class="partner__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noreferrer noopener">
+      <a class="main-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noreferrer noopener">
         HTML Academy
       </a>
     </section>
