--- a/source/index.html
+++ b/source/index.html
@@ -51,21 +51,21 @@
       </picture>
     </section>
 
-    <section class="catalog">
+    <section class="category">
       <h2 class="visually-hidden">Категории продукции</h2>
-      <ul class="catalog__list">
-        <li class="catalog__item catalog__item--slim">
-          <h3 class="catalog__title">похудение</h3>
-          <p class="catalog__desc">Ваш кот весит больше собаки и почти утратил способность
+      <ul class="category__list">
+        <li class="category__item category__item--slim">
+          <h3 class="category__title">похудение</h3>
+          <p class="category__desc">Ваш кот весит больше собаки и почти утратил способность
             лазить по деревьям? Пора на диету! Cat Energy Slim поможет
             вашему питомцу сбросить лишний вес.</p>
-          <a class="catalog__link" href="#">Каталог slim</a>
+          <a class="category__link" href="#">Каталог slim</a>
         </li>
-        <li class="catalog__item catalog__item--heavy">
-          <h3 class="catalog__title">набор массы</h3>
-          <p class="catalog__desc">Заработать авторитет среди дворовых котов и даже собак?
+        <li class="category__item category__item--heavy">
+          <h3 class="category__title">набор массы</h3>
+          <p class="category__desc">Заработать авторитет среди дворовых котов и даже собак?
             Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a class="catalog__link" href="#">Каталог pro</a>
+          <a class="category__link" href="#">Каталог pro</a>
         </li>
       </ul>
     </section>
@@ -174,9 +174,9 @@
       </ul>
     </section>
 
-    <section class="partner">
+    <section class="main-footer__partner">
       <h2 class="visually-hidden">Разработано при поддержке</h2>
-      <a class="partner__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noreferrer noopener">
+      <a class="main-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noreferrer noopener">
         HTML Academy
       </a>
     </section>
