--- a/source/index.html
+++ b/source/index.html
@@ -41,14 +41,14 @@
   <main class="main-container">
     <h1 class="visually-hidden">Cat Energy</h1>
     <section class="hero">
-      <h2 class="hero__title section-title section-title--index">Функциональное питание для котов</h2>
+      <h2 class="hero__title section-title">Функциональное питание для котов</h2>
       <p class="hero__desc">Занялся собой? Займись котом!</p>
-      <a class="hero__button button" href="#">Подобрать программу</a>
       <picture>
         <source type="image/png" media="(min-width: 1440px)" srcset="images/hero-desktop@1x.png 1x, images/hero-desktop@2x.png 2x" width="552" height="499">
         <source type="image/png" media="(min-width: 768px)" srcset="images/hero-tablet@1x.png 1x, images/hero-tablet@2x.png 2x" width="709" height="609">
         <img class="hero__image" src="images/hero-mobile@1x.png" srcset="images/hero-mobile@2x.png 2x" alt="Упаковка еды Cat Energy Курица" width="280" height="270">
       </picture>
+      <a class="hero__button button" href="#">Подобрать программу</a>
     </section>
 
     <section class="category">
