Исправляет размеры товаров на странице каталога, добавляет версию десктоп

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -75,7 +75,7 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#">
               <picture>
-                <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-2-tablet@1x.png 1x, images/catalog-2-tablet@2x.png 2x" width="172" height="196">
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-2-desktop@1x.png 1x, images/catalog-2-desktop@2x.png 2x" width="169" height="196">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-2-tablet@1x.png 1x, images/catalog-2-tablet@2x.png 2x" width="161" height="172">
                 <img class="product-card__image" src="images/catalog-2-mobile@1x.png" srcset="images/catalog-2-mobile@2x.png 2x" alt="Оранжевая упаковка побольше" width="84" height="100">
               </picture>
@@ -134,6 +134,7 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#">
               <picture>
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-4-desktop@1x.png 1x, images/catalog-4-desktop@2x.png 2x" width="169" height="196">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-4-tablet@1x.png 1x, images/catalog-4-tablet@2x.png 2x" width="161" height="172">
                 <img class="product-card__image" src="images/catalog-4-mobile@1x.png" srcset="images/catalog-4-mobile@2x.png 2x" alt="Зеленая упаковка побольше" width="84" height="100">
               </picture>
@@ -192,6 +193,7 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#">
               <picture>
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-6-desktop@1x.png 1x, images/catalog-6-desktop@2x.png 2x" width="169" height="196">
                 <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-6-tablet@1x.png 1x, images/catalog-6-tablet@2x.png 2x" width="161" height="172">
                 <img class="product-card__image" src="images/catalog-6-mobile@1x.png" srcset="images/catalog-6-mobile@2x.png 2x" alt="Синяя упаковка побольше" width="84" height="100">
               </picture>
