--- a/source/catalog.html
+++ b/source/catalog.html
@@ -76,7 +76,7 @@
             <a class="product-card__link-image" href="#">
               <picture>
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-2-desktop@1x.png 1x, images/catalog-2-desktop@2x.png 2x" width="169" height="196">
-                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-2-tablet@1x.png 1x, images/catalog-2-tablet@2x.png 2x" width="161" height="172">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-2-tablet@1x.png 1x, images/catalog-2-tablet@2x.png 2x" width="168" height="206">
                 <img class="product-card__image" src="images/catalog-2-mobile@1x.png" srcset="images/catalog-2-mobile@2x.png 2x" alt="Оранжевая упаковка побольше" width="84" height="100">
               </picture>
             </a>
@@ -105,7 +105,7 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#">
               <picture>
-                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-3-tablet@1x.png 1x, images/catalog-3-tablet@2x.png 2x" width="161" height="172">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-3-tablet@1x.png 1x, images/catalog-3-tablet@2x.png 2x" width="164" height="175">
                 <img class="product-card__image" src="images/catalog-3-mobile@1x.png" srcset="images/catalog-3-mobile@2x.png 2x" alt="Зеленая упаковка" width="68" height="78">
               </picture>
             </a>
@@ -135,7 +135,7 @@
             <a class="product-card__link-image" href="#">
               <picture>
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-4-desktop@1x.png 1x, images/catalog-4-desktop@2x.png 2x" width="169" height="196">
-                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-4-tablet@1x.png 1x, images/catalog-4-tablet@2x.png 2x" width="161" height="172">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-4-tablet@1x.png 1x, images/catalog-4-tablet@2x.png 2x" width="168" height="200">
                 <img class="product-card__image" src="images/catalog-4-mobile@1x.png" srcset="images/catalog-4-mobile@2x.png 2x" alt="Зеленая упаковка побольше" width="84" height="100">
               </picture>
             </a>
@@ -194,7 +194,7 @@
             <a class="product-card__link-image" href="#">
               <picture>
                 <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-6-desktop@1x.png 1x, images/catalog-6-desktop@2x.png 2x" width="169" height="196">
-                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-6-tablet@1x.png 1x, images/catalog-6-tablet@2x.png 2x" width="161" height="172">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-6-tablet@1x.png 1x, images/catalog-6-tablet@2x.png 2x" width="168" height="200">
                 <img class="product-card__image" src="images/catalog-6-mobile@1x.png" srcset="images/catalog-6-mobile@2x.png 2x" alt="Синяя упаковка побольше" width="84" height="100">
               </picture>
             </a>
@@ -223,7 +223,7 @@
           <article class="product-card">
             <a class="product-card__link-image" href="#">
               <picture>
-                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-7-tablet@1x.png 1x, images/catalog-7-tablet@2x.png 2x" width="161" height="172">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-7-tablet@1x.png 1x, images/catalog-7-tablet@2x.png 2x" width="164" height="175">
                 <img class="product-card__image" src="images/catalog-7-mobile@1x.png" srcset="images/catalog-7-mobile@2x.png 2x" alt="Фиолетовая упаковка" width="72" height="84">
               </picture>
             </a>
@@ -251,7 +251,7 @@
         <li class="catalog__item">
           <div class="product-card product-card--more">
             <h3 class="product-card__title product-card__title--icon-plus">Показать еще 100500 товаров</h3>
-            <p class="product-card__desc">
+            <p class="product-card__desc product-card__desc--simple">
               На самом деле вкусов гораздо больше!
             </p>
             <a class="product-card__button button button--secondary" href="#">Показать все</a>
