Добавляет типографику для разных экранов

--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
       <img class="logo__text" src="#" alt="Cat Energy" width="101" height="18">
     </a>
 
-    <nav class="main-nav">
+    <nav class="main-header__nav main-nav">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
