--- a/source/catalog.html
+++ b/source/catalog.html
@@ -20,7 +20,7 @@
       <img class="logo__text" src="#" alt="Cat Energy" width="101" height="18">
     </a>
 
-    <nav class="main-nav">
+    <nav class="main-header__nav main-nav">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -251,7 +251,7 @@
         <li class="catalog__item">
           <div class="product-card product-card--more">
             <h3 class="product-card__title product-card__title--icon-plus">Показать еще 100500 товаров</h3>
-            <p class="product-card__desc product-card__desc--simple">
+            <p class="product-card__desc ">
               На самом деле вкусов гораздо больше!
             </p>
             <a class="product-card__button button button--secondary" href="#">Показать все</a>
@@ -314,11 +314,13 @@
       </address>
       <div class="contacts__map">
         <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa70b588485700b86dbeb0b23fb0b46061e5efc784e68ea2d456d7e1fca6dc536&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-        <picture>
-          <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
-          <source type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
-          <img class="contacts__map-image" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" alt="Адрес на карте" width="320" height="362">
-        </picture>
+        <noscript>
+          <picture>
+            <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x" width="1440" height="400">
+            <source type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x" width="768" height="400">
+            <img class="contacts__map-image" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" alt="Адрес на карте" width="320" height="362">
+          </picture>
+        </noscript>
       </div>
     </section>
   </main>
